--- a/templates/profile.html
+++ b/templates/profile.html
@@ -63,7 +63,7 @@
                                         id="saveButtonFirstName">Ändra</button></p>
                                 <p class="control">
                                     <button type="button" class="button is-danger is-hidden" id="cancelButtonFirstName"
-                                        onclick="toggleHidden('cancelButtonFirstName');toggleSaveButton('saveButtonFirstName');toggleInput('traits.name.first')">Avbryt</button>
+                                        onclick="toggleHidden('cancelButtonFirstName');toggleSaveButton('saveButtonFirstName', false);toggleInput('traits.name.first')">Avbryt</button>
                                 </p>
                             </div>
                         </div>
@@ -80,7 +80,7 @@
                                         id="saveButtonLastName">Ändra</button></p>
                                 <p class="control">
                                     <button type="button" class="button is-danger is-hidden" id="cancelButtonLastName"
-                                        onclick="toggleHidden('cancelButtonLastName');toggleSaveButton('saveButtonLastName');toggleInput('traits.name.last')">Avbryt</button>
+                                        onclick="toggleHidden('cancelButtonLastName');toggleSaveButton('saveButtonLastName', false);toggleInput('traits.name.last')">Avbryt</button>
                                 </p>
                             </div>
                         </div>
@@ -109,7 +109,7 @@
                                         id="saveButtonEmail">Ändra</button></p>
                                 <p class="control">
                                     <button type="button" class="button is-danger is-hidden" id="cancelButtonEmail"
-                                        onclick="toggleHidden('cancelButtonEmail');toggleSaveButton('saveButtonEmail');toggleInput('traits.email')">Avbryt</button>
+                                        onclick="toggleHidden('cancelButtonEmail');toggleSaveButton('saveButtonEmail', false);toggleInput('traits.email')">Avbryt</button>
                                 </p>
                             </div>
                         </div>
@@ -128,7 +128,7 @@
                                         id="saveButtonPhone">Ändra</button></p>
                                 <p class="control">
                                     <button type="button" class="button is-danger is-hidden" id="cancelButtonPhone"
-                                        onclick="toggleHidden('cancelButtonPhone');toggleSaveButton('saveButtonPhone');toggleInput('traits.phone')">Avbryt</button>
+                                        onclick="toggleHidden('cancelButtonPhone');toggleSaveButton('saveButtonPhone', false);toggleInput('traits.phone')">Avbryt</button>
                                 </p>
                             </div>
                         </div>
@@ -146,7 +146,7 @@
                                         id="saveButtonStreet">Ändra</button></p>
                                 <p class="control">
                                     <button type="button" class="button is-danger is-hidden" id="cancelButtonStreet"
-                                        onclick="toggleHidden('cancelButtonStreet');toggleSaveButton('saveButtonStreet');toggleInput('traits.street')">Avbryt</button>
+                                        onclick="toggleHidden('cancelButtonStreet');toggleSaveButton('saveButtonStreet', false);toggleInput('traits.street')">Avbryt</button>
                                 </p>
                             </div>
                         </div>
@@ -165,7 +165,7 @@
                                         id="saveButtonPostalCode">Ändra</button></p>
                                 <p class="control">
                                     <button type="button" class="button is-danger is-hidden" id="cancelButtonPostalCode"
-                                        onclick="toggleHidden('cancelButtonPostalCode');toggleSaveButton('saveButtonPostalCode');toggleInput('traits.postal_code')">Avbryt</button>
+                                        onclick="toggleHidden('cancelButtonPostalCode');toggleSaveButton('saveButtonPostalCode', false);toggleInput('traits.postal_code')">Avbryt</button>
                                 </p>
                             </div>
                         </div>
@@ -183,7 +183,7 @@
                                         id="saveButtonCity">Ändra</button></p>
                                 <p class="control">
                                     <button type="button" class="button is-danger is-hidden" id="cancelButtonCity"
-                                        onclick="toggleHidden('cancelButtonCity');toggleSaveButton('saveButtonCity');toggleInput('traits.city')">Avbryt</button>
+                                        onclick="toggleHidden('cancelButtonCity');toggleSaveButton('saveButtonCity', false);toggleInput('traits.city')">Avbryt</button>
                                 </p>
                             </div>
                         </div>
@@ -201,7 +201,7 @@
                                         id="saveButtonCountry">Ändra</button></p>
                                 <p class="control">
                                     <button type="button" class="button is-danger is-hidden" id="cancelButtonCountry"
-                                        onclick="toggleHidden('cancelButtonCountry');toggleSaveButton('saveButtonCountry');toggleInput('traits.country')">Avbryt</button>
+                                        onclick="toggleHidden('cancelButtonCountry');toggleSaveButton('saveButtonCountry', false);toggleInput('traits.country')">Avbryt</button>
                                 </p>
                             </div>
                         </div>
