Add member numbers for users
Also fix logout and check for admin permissions for deciding when to
show the admin menu. The first registered user will recieve the admin
role.

Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/templates/admin/members.html
+++ b/templates/admin/members.html
@@ -22,6 +22,7 @@
 <script type="text/javascript" charset="utf-8">
     // specify the columns
     var columnDefs = [
+        { headerName: "Medlemsnummer", field: "number" },
         { headerName: "Namn", field: "name" },
         { headerName: "E-mail", field: "email" },
         { headerName: "Telefon", field: "phone" },
@@ -35,6 +36,7 @@
     var rowData = [
         {% for member in members %}
         {
+            number: "{{ member.traits['member_number'] }}",
             name: "{{ member.traits['name']['first'] + " " + member.traits['name']['last'] }}",
             email: "{{ member.traits['email'] }}",
             phone: "070000000",
