--- a/templates/base.html
+++ b/templates/base.html
@@ -109,6 +109,7 @@
             </div>
     
             <div class="navbar-end">
+                {% if admin is True %}
                 <div class="navbar-item has-dropdown is-hoverable">
                     <a class="navbar-link">
                         <span class="icon"><i class="fas fa-comments" aria-hidden="true"></i></span>
@@ -131,6 +132,7 @@
                         </a>
                     </div>
                 </div>
+                {% end %}
                 <div class="navbar-item">
                     <div class="buttons">
                         <a href="/kratos/self-service/browser/flows/logout" class="button is-light">
