--- a/templates/main.html
+++ b/templates/main.html
@@ -6,7 +6,7 @@
     <div class="notification is-warning" id="onboardingNotification">
         <button class="delete" onclick="toggleNotification()"></button>
         <div class="content">
-            <h3 class="title">Välkommen {{ name }}!</h3>
+            <h3 class="title">Välkommen {{ name }}! Ditt medlemsnummer är: #{{ str(number) }}</h3>
             <p>Som ny medlem i Piratpartiet rekommenderar vi att du går igenom den här onboardingen.</p>
         </div>
         <div class="buttons">
