Change license to GPLv3
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/templates/base.html
+++ b/templates/base.html
@@ -128,7 +128,7 @@
                             Roller
                         </a>
                         <a href="/admin" class="navbar-item">
-                            Inställningar för Crew-DB
+                            Inställningar för Member Port
                         </a>
                     </div>
                 </div>
