--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -42,17 +42,28 @@
                             </div>
                             <div class="field">
                                 <div class="control">
-                                    <input name="traits.street" class="input is-large" type="text" placeholder="Street" />
+                                    <input name="traits.postal_address.street" class="input is-large" type="text" placeholder="Street" />
                                 </div>
                             </div>
                             <div class="field">
                                 <div class="control">
-                                    <input name="traits.postal_code" class="input is-large" type="text" placeholder="Postal code" />
+                                    <input name="traits.postal_address.postal_code" class="input is-large" type="text" placeholder="Postal code" />
                                 </div>
                             </div>
                             <div class="field">
                                 <div class="control">
-                                    <input name="traits.city" class="input is-large" type="text" placeholder="City" />
+                                    <input name="traits.postal_address.city" class="input is-large" type="text" placeholder="City" />
+                                </div>
+                            </div>
+                            <div class="field">
+                                <div class="control">
+                                    <div class="select is-large">
+                                        <select name="traits.municipality">
+                                            {% for municipality in municipalities %}
+                                            <option value="{{ municipality.name }}">{{ municipality.name }}</option>
+                                            {% end %}
+                                        </select>
+                                    </div>
                                 </div>
                             </div>
                             <div class="field">
