fix: remove last references to Crew DB
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% if 'title' in globals() %}
-    <title>Crew DB | {{ title }}</title>
+    <title>Member Port | {{ title }}</title>
     {% else %}
-    <title>Crew DB</title>
+    <title>Member Port</title>
     {% end %}
     <link rel="stylesheet" href="{{ static_url('css/bulma.min.css') }}">
     <link rel="stylesheet" href="{{ static_url('fontawesome/css/all.min.css') }}">
