--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Crew DB | Sign in</title>
+    <title>Member Port | Sign in</title>
     <link rel="stylesheet" href="{{ static_url('css/bulma.min.css') }}" />
 </head>
 
@@ -12,7 +12,7 @@
         <div class="hero-body">
             <div class="container has-text-centered">
                 <div class="column is-4 is-offset-4">
-                    <h3 class="title has-text-white">Crew DB</h3>
+                    <h3 class="title has-text-white">Member Port</h3>
                     <p class="subtitle has-text-grey">Member management</p>
                     <div class="box">
                         <figure class="avatar">
