--- a/templates/admin/members.html
+++ b/templates/admin/members.html
@@ -40,9 +40,9 @@
             name: "{{ member.traits['name']['first'] + " " + member.traits['name']['last'] }}",
             email: "{{ member.traits['email'] }}",
             phone: "070000000",
-            postal_code: "{{ member.traits['postal_code'] }}",
-            city: "{{ member.traits['city'] }}",
-            street: "{{ member.traits['street'] }}",
+            postal_code: "{{ member.traits['postal_address']['postal_code'] }}",
+            city: "{{ member.traits['postal_address']['city'] }}",
+            street: "{{ member.traits['postal_address']['street'] }}",
             country: "{{ member.traits['country'] }}"
         },
         {% end %}
