--- a/templates/base.html
+++ b/templates/base.html
@@ -124,6 +124,9 @@
                             Medlemmar
                         </a>
                         <hr class="navbar-divider">
+                        <a href="/admin/geography" class="navbar-item">
+                            Geografi
+                        </a>
                         <a href="/admin/roles" class="navbar-item">
                             Roller
                         </a>
