Navigate back to organizations after adding new organization

--- a/templates/admin/add-organization.html
+++ b/templates/admin/add-organization.html
@@ -57,6 +57,7 @@
 
         postData('/api/organization', formBody).then((data) => {
             console.log(data); // JSON data parsed by `response.json()` call
+            window.location.href = 'organizations'
         })
     }
 </script>
