ButtonRenderere uses value for params

--- a/templates/admin/organizations.html
+++ b/templates/admin/organizations.html
@@ -33,7 +33,7 @@
         {
             name: "{{ organization.name }}",
             description: "{{ organization.description }}",
-            button: {
+            edit: {
                 label: "Ändra",
                 onClick: () => { window.location.href = 'edit-organization?id={{ organization.id }}' }
             }
