--- a/templates/admin/add-organization.html
+++ b/templates/admin/add-organization.html
@@ -19,12 +19,18 @@
             <input class="input" name="description" type="text" placeholder="Name">
         </div>
     </div>
+    <div class="field">
+        <label class="checkbox">
+        <input type="checkbox", name="active">
+        Aktiv
+    </label>
     <div class="control">
         <button type="button"
             class="button is-success"
             onclick="submit()"
             id="saveButtonLastName">Spara</button></p>
     </div>
+</div>
 </div>
 {% end %}
 {% block scripts %}
