--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -18,6 +18,7 @@
                         <figure class="avatar">
                             <img src="{{ static_url('img/logo.svg') }}" >
                         </figure>
+                        {% module xsrf_form_html() %}
                         <form action="/kratos/self-service/registration/methods/password?flow={{ flow }}" method="post">
                             <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
                             <div class="field">
@@ -58,7 +59,7 @@
                             <div class="field">
                                 <div class="control">
                                     <div class="select is-large" style="width: 100%;">
-                                        <select name="traits.municipality" style="width: 100%;">
+                                        <select id="traits.municipality" name="traits.municipality" style="width: 100%;">
                                             <option disabled selected value>Välj din kommun</option>
                                             {% for municipality in municipalities %}
                                             <option value="{{ municipality.name }}">{{ municipality.name }}</option>
@@ -70,7 +71,7 @@
                             <div class="field">
                                 <div class="control">
                                     <div class="select is-large">
-                                        <select name="traits.country" value="Sverige">
+                                        <select id="traits.country" name="traits.country" value="Sverige" onchange="updateMunicipalities()">
                                             {% for country in countries %}
                                             <option value="{{ country.name }}">{{ country.name }}</option>
                                             {% end %}
@@ -98,5 +99,5 @@
         </div>
     </section>
 </body>
-
+<script src="{{ static_url('js/api.js') }}"></script>
 </html>
