fix: update text on registration page
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>MemberPort | Sign in</title>
+    <title>MemberPort | Logga in</title>
     <link rel="stylesheet" href="{{ static_url('css/bulma.min.css') }}" />
 </head>
 
@@ -42,8 +42,8 @@
                     </div>
                     {% end %}
                     <p class="has-text-grey">
-                        <a href="/auth/registration">Sign up</a> &nbsp;·&nbsp;
-                        <a href="/forgot-password">Forgot password</a>
+                        <a href="/auth/registration">Bli medlem</a> &nbsp;·&nbsp;
+                        <a href="/forgot-password">Glömt lösenord</a>
                     </p>
                 </div>
             </div>
