--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>MemberPort | Sign in</title>
+    <title>MemberPort | Bli medlem</title>
     <link rel="stylesheet" href="{{ static_url('css/bulma.min.css') }}" />
 </head>
 
@@ -91,8 +91,7 @@
                     </div>
                     {% end %}
                     <p class="has-text-grey">
-                        <a href="/auth/registration">Sign up</a> &nbsp;·&nbsp;
-                        <a href="/forgot-password">Forgot password</a>
+                        <a href="/auth/login">Logga in</a>
                     </p>
                 </div>
             </div>
